--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/dbams?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+spring.servlet.multipart.file-size-threshold = 50MB
+spring.servlet.multipart.max-file-size= 50MB
+spring.servlet.multipart.max-request-size= 50MB
+spring.servlet.multipart.resolve-lazily=true
